new proj/src/objects/GE_OG_ERP_Finance_User__c.object
<CustomObject>
    <fields>
        <fullName>GE_OG_ERP_Finance_User__c</fullName>
        <label>Finance User</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_SSO__c</fullName>
        <label>SSO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Tier_1_P_L__c</fullName>
        <label>Tier 1 P&amp;L</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Tier_2_P_L__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_ERP_Tier_3_P_L__c</fullName>
        <label>Tier 3 P&amp;L</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>ERP Finance User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_OG_ERP_Finance_User__c</columns>
        <columns>GE_OG_ERP_SSO__c</columns>
        <columns>GE_OG_ERP_Tier_2_P_L__c</columns>
        <columns>GE_OG_ERP_Tier_3_P_L__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ERP Finance Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>